# faucet_solana_auto_with_clashx

./: Cargo.toml  README.md
src/: main.rs
src/api/: clashx.rs  ip.rs  mod.rs  solana.rs
